// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate /v2/petstore.json 1`] = `
Object {
  "addPet": "declare interface RequestBody {
    id?: number; // int64
    category?: {
        id?: number; // int64
        name?: string;
    };
    /**
     * example:
     * doggie
     */
    name: string;
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response405 = void;
",
  "createUser": "declare interface RequestBody {
    id?: number; // int64
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * User Status
     */
    userStatus?: number; // int32
}
declare type Response200 = void;
",
  "createUsersWithArrayInput": "declare type RequestBody = {
    id?: number; // int64
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * User Status
     */
    userStatus?: number; // int32
}[];
declare type Response200 = void;
",
  "createUsersWithListInput": "declare type RequestBody = {
    id?: number; // int64
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * User Status
     */
    userStatus?: number; // int32
}[];
declare type Response200 = void;
",
  "deleteOrder": "declare interface Path {
    /**
     * ID of the order that needs to be deleted
     */
    orderId: number; // int64
}
declare type Response400 = void;
declare type Response404 = void;
",
  "deletePet": "declare interface Header {
    api_key?: string;
}
declare interface Path {
    /**
     * Pet id to delete
     */
    petId: number; // int64
}
declare type Response400 = void;
declare type Response404 = void;
",
  "deleteUser": "declare interface Path {
    /**
     * The name that needs to be deleted
     */
    username: string;
}
declare type Response400 = void;
declare type Response404 = void;
",
  "findPetsByStatus": "declare interface Query {
    /**
     * Status values that need to be considered for filter
     */
    status: (\\"available\\" | \\"pending\\" | \\"sold\\")[];
}
declare type Response200 = void;
declare type Response400 = void;
",
  "findPetsByTags": "declare interface Query {
    /**
     * Tags to filter by
     */
    tags: string[];
}
declare type Response200 = void;
declare type Response400 = void;
",
  "getInventory": "declare type Response200 = void;
",
  "getOrderById": "declare interface Path {
    /**
     * ID of pet that needs to be fetched
     */
    orderId: number; // int64
}
declare type Response200 = void;
declare type Response400 = void;
declare type Response404 = void;
",
  "getPetById": "declare interface Path {
    /**
     * ID of pet to return
     */
    petId: number; // int64
}
declare type Response200 = void;
declare type Response400 = void;
declare type Response404 = void;
",
  "getUserByName": "declare interface Path {
    /**
     * The name that needs to be fetched. Use user1 for testing.
     */
    username: string;
}
declare type Response200 = void;
declare type Response400 = void;
declare type Response404 = void;
",
  "loginUser": "declare interface Query {
    /**
     * The user name for login
     */
    username: string;
    /**
     * The password for login in clear text
     */
    password: string;
}
declare type Response200 = void;
declare type Response400 = void;
",
  "logoutUser": "declare type Response200 = void;
",
  "placeOrder": "declare interface RequestBody {
    id?: number; // int64
    petId?: number; // int64
    quantity?: number; // int32
    shipDate?: string; // date-time
    /**
     * Order Status
     */
    status?: \\"placed\\" | \\"approved\\" | \\"delivered\\";
    complete?: boolean;
}
declare type Response200 = void;
declare type Response400 = void;
",
  "updatePet": "declare interface RequestBody {
    id?: number; // int64
    category?: {
        id?: number; // int64
        name?: string;
    };
    /**
     * example:
     * doggie
     */
    name: string;
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response400 = void;
declare type Response404 = void;
declare type Response405 = void;
",
  "updatePetWithForm": "declare interface Path {
    /**
     * ID of pet that needs to be updated
     */
    petId: number; // int64
}
declare interface RequestBody {
    /**
     * Updated name of the pet
     */
    name?: string;
    /**
     * Updated status of the pet
     */
    status?: string;
}
declare type Response405 = void;
",
  "updateUser": "declare interface Path {
    /**
     * name that need to be updated
     */
    username: string;
}
declare interface RequestBody {
    id?: number; // int64
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * User Status
     */
    userStatus?: number; // int32
}
declare type Response400 = void;
declare type Response404 = void;
",
  "uploadFile": "declare interface Path {
    /**
     * ID of pet to update
     */
    petId: number; // int64
}
declare interface RequestBody {
    /**
     * Additional data to pass to server
     */
    additionalMetadata?: string;
    /**
     * file to upload
     */
    file?: unknown;
}
declare type Response200 = void;
",
}
`;

exports[`generate /v3/petstore.json 1`] = `
Object {
  "addPet": "declare interface RequestBody {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response405 = void;
",
  "createUser": "declare interface RequestBody {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * theUser
     */
    username?: string;
    /**
     * example:
     * John
     */
    firstName?: string;
    /**
     * example:
     * James
     */
    lastName?: string;
    /**
     * example:
     * john@email.com
     */
    email?: string;
    /**
     * example:
     * 12345
     */
    password?: string;
    /**
     * example:
     * 12345
     */
    phone?: string;
    /**
     * User Status
     * example:
     * 1
     */
    userStatus?: number; // int32
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * theUser
     */
    username?: string;
    /**
     * example:
     * John
     */
    firstName?: string;
    /**
     * example:
     * James
     */
    lastName?: string;
    /**
     * example:
     * john@email.com
     */
    email?: string;
    /**
     * example:
     * 12345
     */
    password?: string;
    /**
     * example:
     * 12345
     */
    phone?: string;
    /**
     * User Status
     * example:
     * 1
     */
    userStatus?: number; // int32
}
",
  "createUsersWithListInput": "declare type RequestBody = {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * theUser
     */
    username?: string;
    /**
     * example:
     * John
     */
    firstName?: string;
    /**
     * example:
     * James
     */
    lastName?: string;
    /**
     * example:
     * john@email.com
     */
    email?: string;
    /**
     * example:
     * 12345
     */
    password?: string;
    /**
     * example:
     * 12345
     */
    phone?: string;
    /**
     * User Status
     * example:
     * 1
     */
    userStatus?: number; // int32
}[];
declare type Response200 = void;
",
  "deleteOrder": "declare interface Path {
    orderId: number; // int64
}
declare type Response400 = void;
declare type Response404 = void;
",
  "deletePet": "declare interface Header {
    api_key?: string;
}
declare interface Path {
    petId: number; // int64
}
declare type Response400 = void;
",
  "deleteUser": "declare interface Path {
    username: string;
}
declare type Response400 = void;
declare type Response404 = void;
",
  "findPetsByStatus": "declare interface Query {
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response200 = {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}[];
declare type Response400 = void;
",
  "findPetsByTags": "declare interface Query {
    tags?: string[];
}
declare type Response200 = {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}[];
declare type Response400 = void;
",
  "getInventory": "declare interface Response200 {
    [name: string]: number; // int32
}
",
  "getOrderById": "declare interface Path {
    orderId: number; // int64
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * 198772
     */
    petId?: number; // int64
    /**
     * example:
     * 7
     */
    quantity?: number; // int32
    shipDate?: string; // date-time
    /**
     * Order Status
     * example:
     * approved
     */
    status?: \\"placed\\" | \\"approved\\" | \\"delivered\\";
    complete?: boolean;
}
declare type Response400 = void;
declare type Response404 = void;
",
  "getPetById": "declare interface Path {
    petId: number; // int64
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response400 = void;
declare type Response404 = void;
",
  "getUserByName": "declare interface Path {
    username: string;
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * theUser
     */
    username?: string;
    /**
     * example:
     * John
     */
    firstName?: string;
    /**
     * example:
     * James
     */
    lastName?: string;
    /**
     * example:
     * john@email.com
     */
    email?: string;
    /**
     * example:
     * 12345
     */
    password?: string;
    /**
     * example:
     * 12345
     */
    phone?: string;
    /**
     * User Status
     * example:
     * 1
     */
    userStatus?: number; // int32
}
declare type Response400 = void;
declare type Response404 = void;
",
  "loginUser": "declare interface Query {
    username?: string;
    password?: string;
}
declare type Response200 = string;
declare type Response400 = void;
",
  "logoutUser": "declare type Response200 = void;
",
  "placeOrder": "declare interface RequestBody {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * 198772
     */
    petId?: number; // int64
    /**
     * example:
     * 7
     */
    quantity?: number; // int32
    shipDate?: string; // date-time
    /**
     * Order Status
     * example:
     * approved
     */
    status?: \\"placed\\" | \\"approved\\" | \\"delivered\\";
    complete?: boolean;
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * 198772
     */
    petId?: number; // int64
    /**
     * example:
     * 7
     */
    quantity?: number; // int32
    shipDate?: string; // date-time
    /**
     * Order Status
     * example:
     * approved
     */
    status?: \\"placed\\" | \\"approved\\" | \\"delivered\\";
    complete?: boolean;
}
declare type Response405 = void;
",
  "updatePet": "declare interface RequestBody {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare interface Response200 {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * doggie
     */
    name: string;
    category?: {
        /**
         * example:
         * 1
         */
        id?: number; // int64
        /**
         * example:
         * Dogs
         */
        name?: string;
    };
    photoUrls: string[];
    tags?: {
        id?: number; // int64
        name?: string;
    }[];
    /**
     * pet status in the store
     */
    status?: \\"available\\" | \\"pending\\" | \\"sold\\";
}
declare type Response400 = void;
declare type Response404 = void;
declare type Response405 = void;
",
  "updatePetWithForm": "declare interface Path {
    petId: number; // int64
}
declare interface Query {
    name?: string;
    status?: string;
}
declare type Response405 = void;
",
  "updateUser": "declare interface Path {
    username: string;
}
declare interface RequestBody {
    /**
     * example:
     * 10
     */
    id?: number; // int64
    /**
     * example:
     * theUser
     */
    username?: string;
    /**
     * example:
     * John
     */
    firstName?: string;
    /**
     * example:
     * James
     */
    lastName?: string;
    /**
     * example:
     * john@email.com
     */
    email?: string;
    /**
     * example:
     * 12345
     */
    password?: string;
    /**
     * example:
     * 12345
     */
    phone?: string;
    /**
     * User Status
     * example:
     * 1
     */
    userStatus?: number; // int32
}
declare type Response200 = void;
",
  "uploadFile": "declare interface Path {
    petId: number; // int64
}
declare interface Query {
    additionalMetadata?: string;
}
declare interface Response200 {
    code?: number; // int32
    type?: string;
    message?: string;
}
",
}
`;
